# freertos-atsam-sysview

./: meson.build
FreeRTOSV10.0.0/Source/: tasks.c
FreeRTOSV10.0.0/Source/portable/GCC/ARM_CM0/: port.c  portmacro.h  sysview_readme.txt
FreeRTOSV10.0.0/Source/portable/GCC/ARM_CM4F/: port.c
FreeRTOSV10.0.0/Source/portable/GCC/ARM_CM7/: port.c  portmacro.h
SEGGER_SystemView/: SEGGER_SYSVIEW_FreeRTOS.h
